--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -13,7 +13,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: true
+        fetch-depth: 0
+        
       - uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
