--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,5 @@
 name: Deploy Hugo site to Pages
+
 permissions:
   contents: read
   pages: write
@@ -13,18 +14,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        submodules: true
-        fetch-depth: 0
-        
-      - uses: peaceiris/actions-hugo@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
           extended: true
-      - run: hugo --minify
-      - uses: actions/upload-pages-artifact@v3
+
+      - name: Build
+        run: hugo --minify
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
@@ -32,5 +38,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - id: deployment
+      - name: Deploy
+        id: deployment
         uses: actions/deploy-pages@v4
