--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://alugarov.github.io/gardengauge/privacy"
+baseURL = "https://AlUgarov.github.io/gardengauge/"
 languageCode = "en-us"
 title = "GardenGauge Privacy Policy"
 theme = "PaperMod"
