--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Build
         run: hugo --minify
+        echo "------ built files ------"
+        find public -type f | sort
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
