--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Build and list output
         run: |
-          hugo --minify
+          rm -rf resources public
+          hugo --minify --cleanDestinationDir
           echo "------ built files ------"
           find public -type f | sort
 
